<resources>
    <string name="app_name">CryptoChat</string>

    <!-- HOME TEXT -->
    <string name="home_welcome">Welcome to CryptoChat !</string>
    <string name="home_slogan">Chat totally encrypt. Only those with the key will be able to read your messages.</string>

    <!-- MENUS -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="loading">Loading…</string>

    <!-- ERRORS -->
    <string name="error_must_be_login">You must be logged in !</string>
    <string name="error_field_required">You must fill in this field.</string>.
    <string name="error_short_password">Your password must contain at least %1$d characters</string>
    <string name="error_password_different">Passwords are not the same.</string>
    <string name="unknown_account">Unknown account. Please reconnect.</string>
    <string name="saloon_deleted">You have been kicked, the saloon no longer exist</string>

    <!-- BUTTONS -->
    <string name="login_button">Login</string>
    <string name="start_button">Start</string>
    <string name="register_button">Register</string>
    <string name="back_button">Back</string>
    <string name="validate">Validate</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>

    <!-- LABELS -->
    <string name="mail_address">Mail address</string>
    <string name="password">Password</string>
    <string name="password_conf">Password confirmation</string>
    <string name="unknown_sign_in_response">Unknown sign in response.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="sign_in_cancelled">Sign-in cancelled</string>
    <string name="supposed_hint">Supposed hint</string>
    <string name="saloon_name">Name of the saloon</string>
    <string name="hint_text">Hint to find the saloon\'s security key</string>
    <string name="key_text">The key to crypt the message</string>
    <string name="enter_msg">Enter your message</string>
    <string name="info">Info</string>
    <string name="send">Send</string>
    <string name="new_message">New message</string>
    <string name="see_new_message">See</string>


    <!-- TEXT USED FOR TOAST-->
    <string name="need_hint">You must enter a hint to be allowed to post a message</string>

    <!-- TEXT USED FOR DIALOG-->
    <string name="remove_saloon">Remove selected saloon.</string>
    <string name="add_saloon">Add saloon</string>

    <string name="msg_default">You find the key !</string>
    <string name="setup_username">Setup your username</string>
    <string name="username_hint">Username</string>
    <string name="submit">Save</string>

</resources>